# SyntheticReceiptExtractor

./: README.md  main.py  pyproject.toml
encoder_pretraining/: utils.py
encoder_pretraining/vqvae_model/: vqvae.py
encoder_training/: training.py
encoder_training/vqvae_model/: encoder.py
model_parts/vqvae_model/: README.md  encoder.py  residual.py  vqvae.py
receipt_generator/: README.md  generate_receipts.py
receipt_generator/receipt_gen/: __init__.py  augment.py  data.py  layout.py  render.py
receipt_generator/sample_dataset/: receipt_00001.json  receipt_00002.json  receipt_00003.json  receipt_00004.json  receipt_00005.json  receipt_00006.json  receipt_00007.json  receipt_00008.json
training/: create_csv.py  model.py  train.py  utils.py  vqvaeT5.py
training/encoder_pretraining/: pretrain.py
training/encoder_pretraining/vqvae_model/: decoder.py  encoder.py  quantizer.py  vqvae.py
