[project]
name = "VQVAET5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "tensorboard>=2.20.0",
    "torch>=2.6.0",
    "torch-tb-profiler>=0.4.3",
    "torchvision>=0.21.0",
    "transformers>=5.12.1",
]
